# hyperfocal

./: .gitignore  CLAUDE.md  LICENSE  NOTICE.md  Package.resolved  Package.swift  README.md  ROADMAP.md
.claude/skills/third-party-deps/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  windows.yml
App/: DocumentIcon.icns  Info.plist  project.yml
App/HyperfocalUITests/: BatchProjectJourneyTests.swift  CancelAndBadFrameTests.swift  EmptyStateTests.swift  FuseExportJourneyTests.swift  HyperfocalUITests.swift  RetouchJourneyTests.swift  SettingsJourneyTests.swift  StackListJourneyTests.swift  ToneJourneyTests.swift  UITestHelpers.swift  WindowCloseTests.swift
App/Resources/: Localizable.xcstrings
App/Sources/: AppModel.swift  ContentView.swift  HyperfocalAppMain.swift  MacDialogService.swift  ProjectStore.swift  RetouchSession.swift  SettingsView.swift  Stack.swift  ToneShader.metal  UITestSupport.swift
AppCore/: AppModel.swift  DialogService.swift  Localization.swift  Portability.swift  PreviewImage.swift  ProjectStore.swift  RetouchSession.swift  Stack.swift
Bridge/: HyperfocalBridge.swift
Docs/: cross-platform-plan.md  performance.md
Docs/research/: 2026-07-12-focus-stacking-pass1-academic.json  2026-07-12-focus-stacking-pass2-products.json  2026-07-12-focus-stacking-research.md  2026-07-17-windows-linux-port-evaluation.md  2026-07-19-lossy-nef-linux.md  2026-07-21-pixelstorage-toolchain-bug.md  2026-07-21-swift-issue-draft.md
Probe/: AppModel.swift  ProjectStore.swift  RetouchSession.swift  Stack.swift  main.swift
QtShell/: BrushCircle.qml  CMakeLists.txt  CropOverlay.qml  LutImageProvider.h  Main.qml  PaneItem.cpp  PaneItem.h  RetouchOverlay.qml  Shell.cpp  Shell.h  build.ps1  build.sh  hyperfocal_bridge.h  lut.frag  main.cpp
Scripts/: ci-gate.sh  deploy-cli.ps1  fetch-wgpu.sh  package-app.sh  ui-test.sh  upload-mas.sh  windows-env.ps1  windows-utf8.manifest
Site/: index.html  privacy.html  style.css  tutorial.html
Sources/CImaging/: cimaging.cpp
Sources/CImaging/include/: cimaging.h
Sources/COpenCVRegister/: registration.cpp
Sources/COpenCVRegister/include/: copencvregister.h
Sources/CWgpu/: module.modulemap  shim.h
Sources/HyperfocalKit/: Aligner.swift  BlackPoint.swift  DMapFusion.swift  DNGWriter.swift  DepthRegularize.swift  Despill.swift  Filters.swift  FramePrefetcher.swift  FrameSharpness.swift  FrameSpill.swift  FusionProgress.swift  GPUDMap.swift  GPUPyramid.swift  GrayImage.swift  ImageBuffer.swift  ImageFile.swift  MetalEngine.swift  Metrics.swift  PortableSIMD.swift  PyramidFusion.swift  RawConverter.swift  RockingAnimation.swift  StackError.swift  StackPipeline.swift  StackSource.swift  StackSplitter.swift  SynthStack.swift  ToneCurve.swift  Warp.swift  WarpBench.swift  WgpuDMap.swift  WgpuEngine.swift  WgpuParity.swift  WgpuPyramid.swift  XMPSidecar.swift
Sources/hyperfocal-cli/: Hyperfocal.swift
